<resources>
    <string name="app_name">
        RefugeeJobs
    </string>
    <string name="hint_name">
        Nome
    </string>
    <string name="hint_email">
        Email
    </string>
    <string name="hint_user">
        Usuario
    </string>
    <string name="hint_phone">
        Telefone
    </string>
    <string name="hint_password">
        Senha
    </string>
    <string name="button_create">
        Salvar
    </string>
    <string name="button_login">
        Entrar
    </string>
    <string name="button_start">
        COMEÇAR
    </string>
    <string name="main_activity_title">
        Olá, Bem Vindo ao
    </string>
    <string name="help_text">
        Se precisar de ajuda, procure centros comunitários ou ONGs parceiras para orientação.
    </string>
    <string name="impact_text">
        Juntos, vamos construir um novo recomeço!
    </string>
    <string name="main_activity_text1">
        O aplicativo feito para ajudar você a recomeçar sua jornada.
    </string>
    <string name="main_activity_text2">
        Cadastre seu dados para que empresas interessadas entrem em contato para oferecer oportunidades.
    </string>
    <string name="login_activity_title">
        LOGIN
    </string>
    <string name="login_activity_subTitle">
        Após efetuar o Login, seus dados serão automaticamente salvos.
    </string>
    <string name="phone_mask_hint">+xx (xx)xxxxx-xxxx</string>
    <string name="name_mask_hint">Ex. João da Silva</string>
    <string name="complete_name_hint">Nome Completo</string>
    <string name="profession_mask_hint">Ex. Pedreiro, Cozinheiro etc.</string>
    <string name="personal_experience_hint">Experiência Pessoal</string>
    <string name="country_mask_hint">Ex. Síria, Iraque etc.</string>
    <string name="country_hint">País de Origem</string>
    <string name="languages_mask_hint">Ex. Inglês, Mandarim etc.</string>
    <string name="languages_label_hint">Idiomas Falados</string>
    <string name="email_mask_hint">example@gmail.com</string>
    <string name="register_activity_title_hint">COMPARTILHE SUAS INFORMAÇÕES</string>
    <string name="register_activity_subtitle_hint">Preencha os campos abaixo para que possamos te conhecer melhor</string>
    <string name="logo_image_description">Logo image</string>
</resources>