<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/app"
    xmlns:app2="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="110dp"
        android:layout_height="65dp"
        app2:layout_constraintBottom_toBottomOf="parent"
        app2:layout_constraintEnd_toEndOf="parent"
        app2:layout_constraintHorizontal_bias="0.946"
        app2:layout_constraintStart_toStartOf="parent"
        app2:layout_constraintTop_toTopOf="parent"
        app2:layout_constraintVertical_bias="0.057"
        app2:srcCompat="@drawable/handshake" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="110dp"
        android:layout_height="wrap_content"
        android:fontFamily="monospace"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textSize="16sp"
        android:textStyle="bold"
        app2:layout_constraintBottom_toBottomOf="parent"
        app2:layout_constraintEnd_toEndOf="parent"
        app2:layout_constraintHorizontal_bias="0.947"
        app2:layout_constraintStart_toStartOf="parent"
        app2:layout_constraintTop_toTopOf="parent"
        app2:layout_constraintVertical_bias="0.022" />

    <Button
        android:id="@+id/buttonCreate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#2196F3"
        android:fontFamily="monospace"
        android:text="@string/button_create"
        android:textSize="20sp"
        app2:layout_constraintBottom_toBottomOf="parent"
        app2:layout_constraintEnd_toEndOf="parent"
        app2:layout_constraintStart_toStartOf="parent"
        app2:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintMarginTop="24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textInputLayoutName"
        app:layout_constraintVertical_bias="0.337" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/nameTextInput"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:hint="@string/hint_name"
        android:inputType="textPersonName"
        app2:layout_constraintBottom_toBottomOf="parent"
        app2:layout_constraintEnd_toEndOf="parent"
        app2:layout_constraintHorizontal_bias="0.495"
        app2:layout_constraintStart_toStartOf="parent"
        app2:layout_constraintTop_toTopOf="parent"
        app2:layout_constraintVertical_bias="0.179" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/emailTextInput"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:hint="@string/hint_email"
        android:inputType="textEmailAddress"
        app2:layout_constraintBottom_toBottomOf="parent"
        app2:layout_constraintEnd_toEndOf="parent"
        app2:layout_constraintHorizontal_bias="0.495"
        app2:layout_constraintStart_toStartOf="parent"
        app2:layout_constraintTop_toTopOf="parent"
        app2:layout_constraintVertical_bias="0.281" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/phoneTextInput"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:hint="@string/hint_phone"
        android:inputType="phone"
        app2:layout_constraintBottom_toBottomOf="parent"
        app2:layout_constraintEnd_toEndOf="parent"
        app2:layout_constraintHorizontal_bias="0.495"
        app2:layout_constraintStart_toStartOf="parent"
        app2:layout_constraintTop_toTopOf="parent"
        app2:layout_constraintVertical_bias="0.383" />

</androidx.constraintlayout.widget.ConstraintLayout>
